packages/svelte/tests/compiler-errors/samples/runes-wrong-host-placement/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'host_invalid_placement',
		message: '`$host()` can only be used inside custom element component instances'
	}
});
